{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 125,
  "lineage": "d7c9cb9c-c927-b3ff-fa65-0304fbe520a9",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "vpc_eip",
      "provider": "provider.aws"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider.aws"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat_access",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw_route_table",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1a",
      "provider": "provider.aws"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1c",
      "provider": "provider.aws"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider.aws"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1c",
      "provider": "provider.aws"
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster_master_sg",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_ingress_https",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1a",
      "provider": "provider.aws"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1c",
      "provider": "provider.aws"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1a",
      "provider": "provider.aws"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1c",
      "provider": "provider.aws"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:112542087706:vpc/vpc-0aeedd3a9ef98b6f0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01f884aa3281d024c",
            "default_route_table_id": "rtb-0974d9e8c7ae7c4f5",
            "default_security_group_id": "sg-0826dddd372e47567",
            "dhcp_options_id": "dopt-a4facbdc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0aeedd3a9ef98b6f0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0974d9e8c7ae7c4f5",
            "owner_id": "112542087706",
            "tags": {
              "Name": "klab-vpc"
            }
          }
        }
      ]
    }
  ]
}